Bug 1697521 - In MediaRecorder check for multiple tracks synchronously, per spec. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D110549